# scymnus

./: CMakeLists.txt  LICENSE.MIT  README.md  swagger_controller.hpp  version.hpp.in
controllers/: swagger_controller.hpp
core/: ct_map.hpp  enumeration.hpp  exception.hpp  exception_handler.hpp  named_tuple.hpp  named_tuples_utils.hpp  opeartion.hpp  response.hpp  serializers.hpp  traits.hpp  typelist.hpp  validator.hpp
examples/: CMakeLists.txt
examples/aspects/: main.cpp
examples/calculator/: main.cpp
examples/echo_aspects/: main.cpp
examples/metadata/: main.cpp
examples/minimal/: main.cpp
examples/models/: main.cpp
examples/points/: main.cpp
examples/settings/: main.cpp
examples/simple/: main.cpp
http/: http_common.hpp  query_parser.hpp
meta/: ct_string.hpp  ct_utils.hpp
mime/: mime.cpp  mime.hpp
properties/: constraints.hpp  defaulted.hpp
server/: api_manager.hpp  app.hpp  aspects.hpp  buffer_pool.hpp  connection.hpp  ct_settings.hpp  date_manager.hpp  doc_common.hpp  doc_traits.hpp  headers_container.hpp  http_context.hpp  http_request.hpp  http_response.hpp  memory_resource_manager.hpp  parser.hpp  router.hpp  server.hpp  service_pool.hpp  service_pool_manager.hpp  settings.hpp
url/: url.hpp
utilities/: utils.hpp
